# infuse_envire

./: .gitignore  CMakeLists.txt  install.sh  install_envire.sh
base-boost_serialization/: CMakeLists.txt
base-logging/: CMakeLists.txt  base-logging.pc.in
base-logging/src/: Logging.hpp
base-types/: CMakeLists.txt
cmake/: Config.cmake.in  pkgconfig.pc.cmakein
envire-core/: CMakeLists.txt
envire-core/src/base-boost_serialization/: BaseTypes.hpp
envire-core/src/base-logging/logging/: logging_iostream_style.h
envire-core/src/events/: GraphEvent.cpp  GraphEvent.hpp  GraphEventDispatcher.cpp  ItemAddedEvent.hpp
envire-core/src/graph/: EnvireGraph.cpp  Graph.hpp  TransformGraph.hpp
envire-core/src/items/: Frame.hpp  Transform.hpp
envire-core/src/serialization/: Serialization.cpp  Serialization.hpp
envire-envire_core/: CMakeLists.txt
envire-envire_core/src/events/: EdgeEvents.hpp  GraphEventDispatcher.hpp  GraphEventPublisher.cpp  GraphEventPublisher.hpp  GraphEventSubscriber.cpp  ItemRemovedEvent.hpp
envire-envire_core/src/graph/: EnvireGraph.hpp  Graph.hpp  GraphExceptions.hpp  Path.hpp  TreeView.hpp
envire-envire_core/src/items/: Frame.hpp  ItemBase.hpp  Transform.hpp
envire-envire_core/src/serialization/: ItemHeader.hpp  Serialization.cpp  Serialization.hpp  SerializationHandle.hpp
envire-envire_core/src/util/: Demangle.cpp
install-lib/: CMakeLists.txt
install-lib/src/: install-lib.cmake  setup.sh  template-header-lib.pc.in  template.pc.in
src/base-boost_serialization/: BaseTypes.hpp  BoostTypes.hpp
src/base-logging/logging/: logging_printf_style.cpp
src/base-types/: Angle.cpp  TransformWithCovariance.cpp
src/events/: FrameEvents.hpp  GraphEventPublisher.cpp
src/graph/: EnvireGraph.hpp  GraphTypes.hpp  GraphVisitors.hpp  Path.cpp  TransformGraph.hpp  TreeView.cpp
src/items/: Environment.hpp  Frame.hpp  ItemBase.hpp  Transform.hpp
